# rustbot

./: .gitignore  Cargo.toml  README.md
config/: config.ini
src/: google_translate.rs  main.rs  pressmon_api.rs  pressmon_result.rs  word.rs  word_api.rs  word_result.rs
