[package]
name = "language"
version = "0.1.0"
authors = ["Ayman <ayman.__@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde =  { version = "1.0.119", features = ["derive"] }     
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
configparser = "2.1.0"